package gameWin;

interface ScoreListener {
    void updateScore(int score);
}
