package main;

import gameMenu.Menu;

public class Main {
    public static void main(String[] args) {
        new Menu();
    }
}
