@startuml gameClassDiagram

    skinparam classAttributeIconSize 0

    gameWin.IllegalUnitSizeException --> java.lang.Exception : extends
    gameWin.IllegalDelayException --> java.lang.Exception : extends
    gameWin.NoScoreListenerException --> java.lang.Exception : extends

    gameMenu.Menu --> javax.swing.JFrame : extends
    gameWin.GameWin --> javax.swing.JFrame : extends
    gameWin.GamePanel --> javax.swing.JPanel : extends
    gameWin.ScorePanel --> javax.swing.JPanel : extends

    gameWin.GamePanel --|> java.awt.event.KeyListener : implements
    gameWin.GamePanel --|> java.awt.event.ActionListener : implements
    gameWin.ScorePanel --|> gameWin.ScoreListener : implements

    gameWin.GameWin --* gameWin.ScorePanel : child-component
    gameWin.GameWin --* gameWin.GamePanel : child-component

    gameMenu.Menu -left-* gameWin.GameWin : imports
    gameWin.GamePanel --* gameWin.ScoreListener : imports
    main.Main --* gameMenu.Menu : imports

    package main {
        class Main
    }

    package gameMenu {
        class gameMenu.Menu
    }

    package gameWin {
        class gameWin.IllegalUnitSizeException
        class gameWin.IllegalDelayException
        class gameWin.NoScoreListenerException
        class gameWin.GameWin
        class gameWin.GamePanel
        class gameWin.ScorePanel
        interface gameWin.ScoreListener

    }

    package javax.swing {
        class javax.swing.JFrame
        class javax.swing.JDialog
        class javax.swing.JPanel
    }

    package java.awt.event {
        interface java.awt.event.KeyListener
        interface java.awt.event.ActionListener
    }

    package java.lang {
        class Exception
    }

    class main.Main {
        +void main(String[])
    }

    class gameMenu.Menu {
        -final int {static} SCREEN_WIDTH
        -final int {static} SCREEN_HEIGHT
        
        -final int {static} SMALL
        -final int {static} MEDIUM
        -final int {static} LARGE
        
        -final int {static} EASY
        -final int {static} NORMAL
        -final int {static} HARD

        -JPanel mainPanel
        -JPanel startPanel
        -JPanel choicePanel
        -JPanel mapPanel
        -JPanel difficultyPanel
        -JPanel endPanel

        -ButtonGroup mapGroup
        -ButtonGroup difficultyGroup

        -JRadioButton mapSize_small
        -JRadioButton mapSize_medium
        -JRadioButton mapSize_large

        -JRadioButton difficulty_easy
        -JRadioButton difficulty_normal
        -JRadioButton difficulty_hard

        -JLabel title
        -JLabel instructions
        -JLabel mapLabel
        -JLabel difficultyLabel

        -JButton resetHighScoreBtn

        +Menu()
        +Menu(int initialHighscore)
        +void addChooseMap()
        +void addChooseDifficulty()
        +void addBtnFunctionality()
        +void addStyle()
    }

    class gameWin.GamePanel {
        +final int {static} SCREEN_WIDTH
        +final int {static} SCREEN_HEIGHT

        -final int unitSize
        -final int gameUnits
        -final int delay
        -final int[] snakeX
        -final int[] snakeY
        -final String fontName

        -int appleX
        -int appleY
        
        -int bodyParts
        -int score
        -int highscore
        -char direction
        -boolean running
        -boolean paused
        -Timer timer
        -Random random
        -ScoreListener scoreListener

        +GamePanel(int , int , int , ScoreListener )
        -void startGame()
        -void initialState()
        -void updateScore()
        -void updateHighscore()
        -void spawnApple()
        -void eatApple()
        -void move()
        -void checkCollisions()
        -void togglePause()
        -void pauseGame()
        -void resetGame()
        -void gotoMenu()
        -void draw(Graphics )
        -void gameOver(Graphics )
        #void paintComponent(Graphics )
        +void actionPerformed()
        +void keyPressed(KeyEvent )
        +void keyTyped(KeyEvent )
        +void keyReleased(KeyEvent )
    }

    class gameWin.ScorePanel {
        -JLabel scoreLabel
        
        +ScorePanel()
        +void updateScore(int )
        #void addStyle()
    }

    class gameWin.GameWin {
        -JPanel mainPanel
        -ScorePanel scorePanel
        -GamePanel gamePanel

        +GameWin()
        +void addStyle()
    }

    interface gameWin.ScoreListener {
        +void updateScore(int )
    }

@enduml
